# inspirer-actix-ext-support

./: Cargo.toml
inspirer-actix-ext-core/: Cargo.toml
inspirer-actix-ext-core/src/: config.rs  error.rs  lib.rs  module.rs  service.rs
inspirer-actix-ext-derive/: Cargo.toml
inspirer-actix-ext-derive/src/: lib.rs  service.rs
inspirer-actix-modules/database-sqlx/: Cargo.toml
inspirer-actix-modules/database-sqlx/src/: config.rs  dao.rs  lib.rs  module_provider.rs  statement.rs
inspirer-actix-modules/database-sqlx/src/statement/: pagination.rs  sort.rs
inspirer-actix-modules/redis/: Cargo.toml
inspirer-actix-modules/redis/src/: config.rs  lib.rs  module_provider.rs
inspirer-actix-validator/: Cargo.toml
inspirer-actix-validator/src/: error.rs  json.rs  lib.rs
inspirer-json-web-token/: Cargo.toml
inspirer-json-web-token/src/: lib.rs
src/: lib.rs  module.rs
