[package]
name = "inspirer-actix-ext"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[workspace]
members = [
    ".",
    "inspirer-actix-ext-core",
    "inspirer-actix-modules/database-sqlx",
    "inspirer-actix-modules/redis",
]

[dependencies]
inspirer-actix-ext-core = { path = "inspirer-actix-ext-core" }
inspirer-actix-module-database-sqlx = { path = "inspirer-actix-modules/database-sqlx", optional = true }
inspirer-actix-module-redis = { path = "inspirer-actix-modules/redis", optional = true }

[features]
database = ["inspirer-actix-module-database-sqlx"]
redis = ["inspirer-actix-module-redis"]