[package]
name = "inspirer-actix-ext"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[workspace]
members = [
    ".",
    "inspirer-actix-ext-core",
    "inspirer-actix-ext-derive",
    "inspirer-actix-validator",
    "inspirer-actix-modules/database-sqlx",
    "inspirer-actix-modules/redis",
]

[dependencies]
inspirer-actix-ext-core = { path = "inspirer-actix-ext-core" }
inspirer-actix-ext-derive = { path = "inspirer-actix-ext-derive" }
inspirer-actix-module-database-sqlx = { path = "inspirer-actix-modules/database-sqlx", optional = true, default-features = false }
inspirer-actix-module-redis = { path = "inspirer-actix-modules/redis", optional = true }

[features]
database = ["inspirer-actix-module-database-sqlx"]
redis = ["inspirer-actix-module-redis"]
runtime-actix-rustls = ["inspirer-actix-module-database-sqlx/runtime-actix-rustls"]
runtime-actix-native-tls = ["inspirer-actix-module-database-sqlx/runtime-actix-native-tls"]
runtime-tokio-rustls = ["inspirer-actix-module-database-sqlx/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["inspirer-actix-module-database-sqlx/runtime-tokio-native-tls"]
