[package]
name = "inspirer-actix-ext-core"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[dependencies]
ahash = "0.7.0"
actix-web = "3"
log = "^0.4.0"
futures = "0.3"
anyhow = "^1.0.38"
config = "0.11"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }