[package]
authors = ["Chongyi <xpz3847878@163.com>"]
edition = "2018"
name = "inspirer-actix-validator"
version = "0.1.0"

[dependencies]
actix-web = "*"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_qs = {version = "0.8", features = ["actix"]}
validator = {version = "0.13", features = ["derive"]}
