[package]
name = "inspirer-actix-module-database-sqlx"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[dependencies]
inspirer-actix-ext-core = { path = "../../inspirer-actix-ext-core" }
sqlx = { version = "0.4.2", features = ["runtime-tokio-rustls", "mysql"] }
log = "^0.4.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"