[package]
name = "inspirer-actix-module-redis"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[dependencies]
inspirer-actix-ext-core = { path = "../../inspirer-actix-ext-core" }
redis = { version = "0.20.0", features = ["tokio-comp", "streams"] }
log = "^0.4.0"
serde = { version = "1.0", features = ["derive"] }